# hse-econ-project

./: .gitignore  Approximation.h  Approximation_.h  BFGS.h  CDF-2.tex  CDF.tex  CMakeLists.txt  LICENSE  LineSearch.h  Param.h  README.md  Rosenbrock.cpp  approx_logistic_regression.cpp  comp.py  logistic_regression.cpp  requirements.txt  setup.py  test.cpp  test.py
.github/workflows/: release.yml
Math/: CDF.tex
aux/: BFGS.h  Interpolation.h  Rosenbrock.cpp
cdf_files/: Approximation.h  test.cpp
move cdfunc files/: approx_log_reg.cpp
nychka/distribution/: polylogarithm.cpp
python_files/: cdf_module_np.py  density.py  tester.py
